--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -6,5 +6,7 @@ spring:
 
 logging:
   level:
-    org.hibernate.orm.jdbc.bind: trace  # ?? ??? ???? ??
+    org.hibernate.orm.jdbc.bind: trace
 
+mybatis:
+  mapper-locations: classpath:mapper/*.xml
